# synthtemplate

./: .gitignore  .gitmodules  AudioStream.cpp  AudioStream.h  CMakeLists.txt  README.md  SynthManager.cpp  SynthManager.h  buildinstructions.txt  main.cpp  synth.cpp  synth.h
